[gd_scene load_steps=12 format=2]

[ext_resource path="res://images/buttons/info.png" type="Texture" id=1]
[ext_resource path="res://images/icons/food.png" type="Texture" id=2]
[ext_resource path="res://images/icons/time.png" type="Texture" id=3]
[ext_resource path="res://HUD.gd" type="Script" id=4]
[ext_resource path="res://fonts/MiddleText.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/SmallText.tres" type="DynamicFont" id=6]
[ext_resource path="res://images/icon32.png" type="Texture" id=7]
[ext_resource path="res://images/icons/wood.png" type="Texture" id=8]
[ext_resource path="res://prefabs/MouseIcon.gd" type="Script" id=10]
[ext_resource path="res://images/buttons/building.png" type="Texture" id=11]

[sub_resource type="GDScript" id=1]
script/source = "extends Panel

func _ready():
	pass # Replace with function body.

#func _process(delta):
#	pass
"

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="MouseIcon" type="TextureRect" parent="."]
margin_left = -59.0
margin_top = 10.0
margin_right = -19.0
margin_bottom = 50.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
margin_right = 137.0
margin_bottom = 92.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingButton" type="TextureButton" parent="Menu"]
margin_right = 137.0
margin_bottom = 44.0
texture_normal = ExtResource( 11 )

[node name="Label" type="Label" parent="Menu/BuildingButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 54.0
custom_fonts/font = ExtResource( 5 )
text = "建 筑"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoButton" type="TextureButton" parent="Menu"]
margin_top = 48.0
margin_right = 137.0
margin_bottom = 92.0
texture_normal = ExtResource( 1 )

[node name="Label" type="Label" parent="Menu/InfoButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 54.0
custom_fonts/font = ExtResource( 5 )
text = "领 地"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildingList" type="Panel" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="HBoxContainer" parent="BuildingList"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DetailPanel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.5
margin_top = -242.0
margin_right = 216.5
margin_bottom = 150.0
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseIcon" type="TextureButton" parent="DetailPanel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -32.0
margin_bottom = 32.0
texture_normal = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SureButton" type="TextureButton" parent="DetailPanel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -43.5
margin_top = -47.0
margin_right = 44.5
margin_bottom = -9.0
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DetailPanel/SureButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
text = "确 定"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="DetailPanel"]
anchor_right = 1.0
margin_left = 36.0
margin_top = 5.0
margin_right = -36.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 5 )
text = "农舍"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Product" type="Label" parent="DetailPanel"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 4.0
margin_top = -147.0
margin_bottom = 141.0
custom_fonts/font = ExtResource( 6 )
text = "增加 5 食物收入，需要 5 木材，需要 1 农民来工作。需要 5 木材，需要 1 农民来工作。需要 5 木材，需要 1 农民来工作。需要 5 木材，需要 1 农民来工作。需要 5 木材，需要 1 农民来工作。需要 5 木材，需要 1 农民来工作。需要 5 木材，需要 1 农民来工作。需要 5 木材，需要 1 农民来工作。
- 生产建筑
- 耐久：144
- 每次升级食物 + 1，所需材料 + 40%"
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resource" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -495.0
margin_bottom = 32.0

[node name="Date" type="HBoxContainer" parent="Resource"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 4.0
margin_top = -16.0
margin_right = 201.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="Resource/Date"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Resource/Date"]
margin_left = 36.0
margin_top = 1.0
margin_right = 197.0
margin_bottom = 30.0
rect_min_size = Vector2( 161, 0 )
custom_fonts/font = ExtResource( 6 )
text = "0年00月00日"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Food" type="HBoxContainer" parent="Resource"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 204.0
margin_top = -16.0
margin_right = 349.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="Resource/Food"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Resource/Food"]
margin_left = 36.0
margin_top = 1.0
margin_right = 140.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 6 )
text = "10001000"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Wood" type="HBoxContainer" parent="Resource"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 350.0
margin_top = -16.0
margin_right = 495.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="TextureRect" parent="Resource/Wood"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Resource/Wood"]
margin_left = 36.0
margin_top = 1.0
margin_right = 127.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 6 )
text = "0001111"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Menu/BuildingButton" to="." method="show_building_bar"]
[connection signal="pressed" from="DetailPanel/CloseIcon" to="." method="hide_all_panel"]
[connection signal="pressed" from="DetailPanel/SureButton" to="." method="hide_all_panel"]
